force-app/main/default/objects/Green_Latern__c/Green_Latern__c.object-meta.xml
<CustomObject>
    <label>Green Latern</label>
    <nameField>
        <label>Green Latern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Green Laterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>