force-app/main/default/objects/Green_Latern__c/fields/Marvel_Name__c.field-meta.xml
<CustomField>
    <fullName>Marvel_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marvel Name</label>
    <referenceTo>Black_Panther__c</referenceTo>
    <relationshipLabel>Green Laterns</relationshipLabel>
    <relationshipName>DC_Name</relationshipName>
    <type>Lookup</type>
</CustomField>