force-app/main/default/objects/Green_Latern__c/fields/SSN_Number__c.field-meta.xml
<CustomField>
    <fullName>SSN_Number__c</fullName>
    <label>SSN Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>