force-app/main/default/objects/Green_Latern__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>